Replace "session" by "apikey"
Out with the old crap

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -43,10 +43,10 @@
         var formWasSubmitted = false;
 
         // Information we need
-        var sabSession = '$session';
+        var sabSession = '$apikey';
         var rootURL = '${root}'
         var urlBase = '${url_base}'
-        var folderBrowseUrl = '${root}api?mode=browse&output=json&apikey=$session';
+        var folderBrowseUrl = '${root}api?mode=browse&output=json&apikey=$apikey';
         var folderSeperator = '#if $os.sep == '\\' then '\\\\' else '/'#'
 
         // Translations
