--- a/interfaces/Config/templates/config_cat.tmpl
+++ b/interfaces/Config/templates/config_cat.tmpl
@@ -27,7 +27,7 @@
                                 <span class="glyphicon glyphicon-option-vertical"></span>
                             </td>
                             <td>
-                                <input type="hidden" name="session" value="$session" />
+                                <input type="hidden" name="apikey" value="$apikey" />
                                 <input type="hidden" name="order" value="$slot.order" />
                                 <input type="hidden" value="$slot.name" name="name" />
                                 <!--#if $slot.name != '*'#-->
