--- a/interfaces/Config/templates/config_special.tmpl
+++ b/interfaces/Config/templates/config_special.tmpl
@@ -4,7 +4,7 @@
 
 <div class="colmask">
     <form action="saveSpecial" method="post" autocomplete="off">
-        <input type="hidden" id="session" name="session" value="$session" />
+        <input type="hidden" id="apikey" name="apikey" value="$apikey" />
         <div class="padTable">
             <h4 class="darkred nomargin">$T('explain-special')</h4>
         </div>
