--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -42,7 +42,7 @@
 
         <!-- Make translations available in scripts -->
         <script type="text/javascript">
-            var apiKey = "$session";
+            var apiKey = "$apikey";
             var displayLang = "$active_lang";
             var sabSpeedHistory = [$bytespersec_list];
             var newRelease = "$new_release";
