--- a/interfaces/Plush/templates/_inc_header.tmpl
+++ b/interfaces/Plush/templates/_inc_header.tmpl
@@ -36,7 +36,7 @@
   <script type="text/javascript" src="${path}static/javascripts/plush.js?$version"></script>
   <script type="text/javascript">
     jQuery(function($){
-      $.plush.apikey = "$session";
+      $.plush.apikey = "$apikey";
       $.plush.Tprev = "$T('Plush-prev')"; // translations for pagination
       $.plush.Tnext = "$T('Plush-next')";
       $.plush.Tconfirmation = "$T('Plush-confirm')";
@@ -54,7 +54,7 @@
   <script type="text/javascript" src="${path}static/javascripts/plush.js?$version"></script>
   <script type="text/javascript">
     jQuery(function($){
-      $.plush.apikey = "$session";
+      $.plush.apikey = "$apikey";
       $.plush.Tprev = "$T('Plush-prev')"; // translations for pagination
       $.plush.Tnext = "$T('Plush-next')";
       $.plush.Tconfirmation = "$T('Plush-confirm')";
@@ -68,7 +68,7 @@
   <script type="text/javascript">
     var config_pane = "$pane";
     var help_uri = "$help_uri";
-    var apikey = "$session";
+    var apikey = "$apikey";
     var confirmWithoutSavingPrompt = "$T('Plush-confirmWithoutSavingPrompt')";
   </script>
 #end if#
