--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -9,7 +9,7 @@
         </label>
     </div>
     <form action="saveGeneral" method="post" name="fullform" class="fullform" autocomplete="off">
-    <input type="hidden" id="session" name="session" value="$session" />
+    <input type="hidden" id="apikey" name="apikey" value="$apikey" />
     <input type="hidden" id="ajax" name="ajax" value=1 />
     <div class="section">
         <div class="col2">
@@ -139,8 +139,8 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="apikey">$T('opt-apikey')</label>
-                    <input type="text" id="apikey" class="fileBrowserField" value="$session" readonly />
-                    <button class="btn btn-default show_qrcode" title="$T('explain-qr-code')" rel="$session" ><span class="glyphicon glyphicon-qrcode"></span></button>
+                    <input type="text" id="apikey" class="fileBrowserField" value="$apikey" readonly />
+                    <button class="btn btn-default show_qrcode" title="$T('explain-qr-code')" rel="$apikey" ><span class="glyphicon glyphicon-qrcode"></span></button>
                     <button class="btn btn-default generate_key" id="generate_new_apikey" title="$T('button-apikey')"><span class="glyphicon glyphicon-repeat"></span></button>
                     <span class="desc">$T('explain-apikey')</span>
                 </div>
