Queue-item labels no longer part of name but separate API-property

--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -93,6 +93,9 @@
                 </td>
                 <td class="name">
                     <div class="row-wrap-text" data-bind="visible: !editingName(), css: { 'direct-unpack-text': direct_unpack }">
+                         <!-- ko foreach: labels -->
+                            <span class="label label-warning" data-bind="text: \$data" ></span>
+                        <!-- /ko -->
                         <span data-bind="text: name, attr: { 'title': name_title }"></span>
                         <!-- ko if: password()  -->
                         <small class="queue-item-password">
