Update Javascript libraries in Glitter
But not Bootstrap, because the icons are still bad.

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -138,8 +138,8 @@
                     <span class="desc">$T('explain-local_ranges')</span>
                 </div>
                 <div class="field-pair">
-                    <label class="config" for="apikey">$T('opt-apikey')</label>
-                    <input type="text" id="apikey" class="fileBrowserField" value="$apikey" readonly />
+                    <label class="config" for="apikey_display">$T('opt-apikey')</label>
+                    <input type="text" id="apikey_display" class="fileBrowserField" value="$apikey" readonly />
                     <button class="btn btn-default show_qrcode" title="$T('explain-qr-code')" rel="$apikey" ><span class="glyphicon glyphicon-qrcode"></span></button>
                     <button class="btn btn-default generate_key" id="generate_new_apikey" title="$T('button-apikey')"><span class="glyphicon glyphicon-repeat"></span></button>
                     <span class="desc">$T('explain-apikey')</span>
