--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -124,11 +124,11 @@
 
         <!-- Inclusion is faster than external scripts. We load momentJS locale seperatly so failure won't break anything -->
         <script type="text/javascript">
-            <!--#include raw $webdir + "/static/javascripts/jquery.min.js"#-->
+            <!--#include raw $webdir + "/static/javascripts/jquery-3.5.1.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery-ui.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery.peity.min.js"#-->
-            <!--#include raw $webdir + "/static/javascripts/moment.min.js"#-->
-            <!--#include raw $webdir + "/static/javascripts/knockout-latest.js"#-->
+            <!--#include raw $webdir + "/static/javascripts/moment-2.26.0.min.js"#-->
+            <!--#include raw $webdir + "/static/javascripts/knockout-3.5.1.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/knockout-extensions.js"#-->
             <!--#include raw $webdir + "/static/bootstrap/js/bootstrap.min.js"#-->
             <!--#include $webdir + "/static/javascripts/glitter.js"#-->
