--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -439,7 +439,7 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">$T('Glitter-addNZB')</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body form-horizontal">
                 <div class="row">
                     <form data-bind="submit: addNZBFromURL" class="col-sm-6">
                         <fieldset>
@@ -470,29 +470,45 @@
                 </div>
                 <div class="clearfix"></div>
                 <hr />
-                <div class="row form-horizontal">
-                    <label class="col-sm-6 control-label">$T('Glitter-addnzbFilename')</label>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">$T('name')</label>
                     <div class="col-sm-6">
-                        <input type="text" name="nzbname" id="nzbname" placeholder="$T('name')" class="form-control" />
+                        <input type="text" name="nzbname" id="nzbname" placeholder="$T('Glitter-addnzbFilename')" class="form-control" />
                     </div>
                 </div>
-                <hr />
-                <div class="clearfix"></div>
-                <div class="add-nzb-inputbox" title="$T('category')" data-tooltip="true" data-placement="left">
-                    <span class="glyphicon glyphicon-tag"></span>
-                    <select name="Category" class="form-control" data-bind="options: queue.categoriesList, optionsValue: 'catValue', optionsText: 'catText',"></select>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">$T('srv-password')</label>
+                    <div class="col-sm-6">
+                        <input type="text" name="password" id="password" placeholder="$T('srv-optional')" class="form-control" />
+                    </div>
                 </div>
-                <div class="add-nzb-inputbox" title="$T('priority')" data-tooltip="true" data-placement="left">
-                    <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
-                    <select name="Priority" class="form-control" data-bind="options: queue.priorityOptions, optionsValue: 'value', optionsText: 'name', optionsCaption: '$T('default')'"></select>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">$T('category')</label>
+                    <div class="col-sm-6">
+                        <select name="Category" class="form-control" data-bind="options: queue.categoriesList, optionsValue: 'catValue', optionsText: 'catText',"></select>
+                        <span class="glyphicon glyphicon-tag"></span>
+                    </div>
                 </div>
-                <div class="add-nzb-inputbox" title="$T('swtag-pp')" data-tooltip="true" data-placement="left">
-                    <span class="glyphicon glyphicon-check"></span>
-                    <select name="Processing" class="form-control" data-bind="options: queue.processingOptions, optionsValue: 'value', optionsText: 'name', optionsCaption: '$T('default')'"></select>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">$T('priority')</label>
+                    <div class="col-sm-6">
+                        <select name="Priority" class="form-control" data-bind="options: queue.priorityOptions, optionsValue: 'value', optionsText: 'name', optionsCaption: '$T('default')'"></select>
+                        <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
+                    </div>
                 </div>
-                <div class="add-nzb-inputbox" title="$T('eoq-scripts')" data-tooltip="true" data-placement="left">
-                    <span class="glyphicon glyphicon-flash"></span>
-                    <select name="Post-processing" class="form-control" data-bind="options: queue.scriptsList, optionsCaption: '$T('default')'"></select>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">$T('swtag-pp')</label>
+                    <div class="col-sm-6">
+                        <select name="Processing" class="form-control" data-bind="options: queue.processingOptions, optionsValue: 'value', optionsText: 'name', optionsCaption: '$T('default')'"></select>
+                        <span class="glyphicon glyphicon-check"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">$T('eoq-scripts')</label>
+                    <div class="col-sm-6">
+                        <select name="Post-processing" class="form-control" data-bind="options: queue.scriptsList, optionsCaption: '$T('default')', enable: (queue.scriptsList().length > 1)"></select>
+                        <span class="glyphicon glyphicon-flash"></span>
+                    </div>
                 </div>
                 <div class="clearfix"></div>
             </div>
