Show commit hash when running from GitHub sources

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -9,7 +9,7 @@
             <tbody>
                 <tr>
                     <th scope="row">$T('version'): </th>
-                    <td>$version [$build]</td>
+                    <td>$version [<a href="https://github.com/sabnzbd/sabnzbd/commit/$build" target="_blank">$build</a>]</td>
                 </tr>
                 <tr>
                     <th scope="row">$T('uptime'): </th>
