Use fully customizable date ranges for server graphs
Closes #1645

--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -795,6 +795,7 @@ input[type="submit"]:hover {
 input[type="text"],
 input[type="email"],
 input[type="url"],
+input[type="date"],
 input[type="number"],
 input[type="password"],
 textarea,
