--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -2,44 +2,8 @@
 <!--#set global $help_uri="configuration/3.1/servers"#-->
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
-<!--
-    We need to find how many months we have recorded so far, so we
-    loop over all the dates to find the lowest value and then use
-    this to calculate the date-selector and maximum value per month.
--->
 <!--#import json#-->
 <!--#import datetime#-->
-<!--#import sabnzbd.misc#-->
-
-<!--#set month_names = [$T('January'), $T('February'), $T('March'), $T('April'), $T('May'), $T('June'), $T('July'), $T('August'), $T('September'), $T('October'), $T('November'), $T('December')] #-->
-<!--#set min_date = datetime.date.today()#-->
-<!--#set max_data_all = {}#-->
-
-<!--#for $server in $servers #-->
-    <!--#if 'amounts' in $server#-->
-        <!--#set max_data_server = {}#-->
-        <!--#for date in $server['amounts'][4]#-->
-            <!--#set split_date = $date.split('-')#-->
-            <!--#set min_date = min(min_date, datetime.date(int(split_date[0]), int(split_date[1]), 1))#-->
-
-            <!--#set month_date = $date[:7]#-->
-            <!--#if $month_date not in $max_data_server#-->
-                <!--#set max_data_server[$month_date] = 0#-->
-             <!--#end if#-->
-             <!--#set max_data_server[$month_date] = max(max_data_server[$month_date], $server['amounts'][4][$date])#-->
-        <!--#end for#-->
-
-        <!--#for month_date in max_data_server#-->
-            <!--#if $month_date not in $max_data_all#-->
-                <!--#set max_data_all[$month_date] = 0#-->
-             <!--#end if#-->
-             <!--#set max_data_all[$month_date] = max(max_data_all[$month_date], max_data_server[$month_date])#-->
-        <!--#end for#-->
-    <!--#end if#-->
-<!--#end for#-->
-
-<!--#set months_recorded = list(sabnzbd.misc.monthrange(min_date, datetime.date.today()))#-->
-<!--#$months_recorded.reverse()#-->
 
 <script type="text/javascript">
     // Define variable needed for the server-plots
@@ -53,21 +17,13 @@
             <input type="checkbox" id="advanced-settings-button" name="advanced-settings-button"> $T('button-advanced')
         </label>
 
-        <!--#if $months_recorded#-->
         <div class="advanced-buttonSeperator"></div>
         <div class="chart-selector-container" title="$T('srv-bandwidth')">
             <span class="glyphicon glyphicon-signal"></span>
-            <select name="chart-selector" id="chart-selector">
-                <!--#for $cur_date in months_recorded#-->
-                    <!--#set month_date = '%d-%02d' % ($cur_date.year, $cur_date.month)#-->
-                    <!--#if $month_date not in $max_data_all#-->
-                        <!--#set max_data_all[$month_date] = 0#-->
-                     <!--#end if#-->
-                    <option value="$month_date" data-max="$max_data_all[$month_date]">$month_names[$cur_date.month-1] $cur_date.year</option>
-                <!--#end for#-->
-            </select>
+            <!--#set today = datetime.date.today()#-->
+            <input type="date" name="chart-start" id="chart-start" value="<!--#echo (today-datetime.timedelta(days=30)).strftime('%Y-%m-%d')#-->"> -
+            <input type="date" name="chart-end" id="chart-end" value="<!--#echo today.strftime('%Y-%m-%d')#-->">
         </div>
-        <!--#end if#-->
     </div>
     <div class="section" id="addServerContent" style="display: none;">
         <div class="col2">
@@ -287,7 +243,7 @@
                             $T('today'): $(server['amounts'][3])B<br/>
                             $T('thisWeek'): $(server['amounts'][2])B<br/>
                             $T('thisMonth'): $(server['amounts'][1])B<br/>
-                            <span id="server-data-label-${cur}"></span>: <span id="server-data-value-${cur}"></span>
+                            $T('custom'): <span id="server-data-value-${cur}"></span>
                         </div>
                         <div class="server-chart" data-serverid="${cur}"s>
                             <div id="server-chart-${cur}" class="ct-chart"></div>
@@ -331,58 +287,72 @@
     }
 
     function showCharts() {
-        // This month
-        var theMonth = \$('#chart-selector').val()
-        var thisDay = new Date()
+        // Get the constants
+        const startDate = new Date(\$('#chart-start').val())
+        const endDate = new Date(\$('#chart-end').val())
+        const oneDay = 24 * 60 * 60 * 1000
+        const nrDays = Math.round((endDate-startDate)/oneDay)
 
-        // What month are we doing?
-        var inputDate = new Date(theMonth+'-01')
-        var baseDate = new Date(inputDate.getUTCFullYear(), inputDate.getUTCMonth(), 1)
-        var maxDaysInMonth = new Date(baseDate.getFullYear(), baseDate.getMonth()+1, 0).getDate()
+        // Show only maximum 10 labels to avoid cluttering
+        const labelStep = Math.round(nrDays/10)
 
-        // Set the new maximum
-        chartOptions.axisY.high = \$('#chart-selector :selected').data('max');
-        chartOptions.axisY.low = 0
+        // Save largest value
+        var maxVal = 0
 
         // For each chart
-        \$('.server-chart').each(function(i, elemn) {
-            var server_id = \$(elemn).data('serverid')
+        \$('.server-chart').each(function(j, elemn) {
+            const server_id = \$(elemn).data('serverid')
+            var totalThisRange = 0
 
             // Fill the data array
             var data = {
                 labels: [],
                 series: [[]]
             };
-            var totalThisMonth = 0
-            for(var i = 1; i < maxDaysInMonth+1; i++) {
+
+            for(var i = 0; i < nrDays+1; i++) {
+                // Update the date
+                const checkDate = new Date(startDate)
+                checkDate.setDate(checkDate.getDate() + i);
+
                 // Add X-label
-                if(i % 3 == 1) {
-                    data['labels'].push(i)
+                if(i % labelStep === 0) {
+                    data['labels'].push(checkDate.getDate())
                 } else {
                     data['labels'].push(NaN)
                 }
 
-                // Get formatted date
-                baseDate.setDate(i)
-                var dateCheck = toFormattedDate(baseDate)
+                // Date we can check in the array
+                const dateCheck = toFormattedDate(checkDate)
 
                 // Add data if we have it
                 if(dateCheck in serverData[server_id]) {
                     data['series'][0].push(serverData[server_id][dateCheck])
-                    totalThisMonth += serverData[server_id][dateCheck]
-                } else if(thisDay.getYear() == baseDate.getYear() && thisDay.getMonth() == baseDate.getMonth() && thisDay.getDate() < i) {
-                    data['series'][0].push(NaN)
-                } else {
+                    totalThisRange += serverData[server_id][dateCheck]
+                    maxVal = Math.max(maxVal, serverData[server_id][dateCheck])
+                }  else {
                     data['series'][0].push(0)
                 }
             }
 
             // Update the text value
-            \$('#server-data-label-' + server_id).text(\$('#chart-selector :selected').text())
-            \$('#server-data-value-' + server_id).text(filesize(totalThisMonth, {round: 1}))
+            \$('#server-data-value-' + server_id).text(filesize(totalThisRange, {round: 1}))
+
+            // Save data in a very ugly way, but we need to do this
+            // so we can calculate the maximum Y-axis for all graphs
+            \$(elemn).data("chart-data", data)
+        })
+
+        // Set the maximum
+        chartOptions.axisY.high = maxVal;
+        chartOptions.axisY.low = 0
+
+        // Update all the axis with the largest value and draw the graph
+        \$('.server-chart').each(function(j, elemn) {
+            const server_id = \$(elemn).data('serverid')
 
             // Show the chart
-            chart = new Chartist.Line('#server-chart-'+server_id, data, chartOptions);
+            chart = new Chartist.Line('#server-chart-'+server_id, \$(elemn).data("chart-data"), chartOptions)
             chart.on('created', function(context) {
                 // Make sure to add this as the first child so it's at the bottom
                 context.svg.elem('rect', {
@@ -391,7 +361,7 @@
                     width: context.chartRect.width(),
                     height: context.chartRect.height()+2,
                     fill: 'none',
-                    stroke: '#B9B9B9',
+                    stroke: '#b9b9b9',
                     'stroke-width': '1px'
                 }, '', context.svg, true)
                 \$('#server-chart-'+server_id+' .ct-label.ct-vertical').each(function(index, elmn) {
@@ -399,6 +369,10 @@
                 })
             });
         })
+
+        // Limit input to sensible values
+        \$('#chart-start').attr("max", \$('#chart-end').val())
+        \$('#chart-end').attr("min", \$('#chart-start').val())
     }
 
     // Need to mitigate timezone effects!
@@ -425,7 +399,7 @@
         /**
             Update charts when changed
         **/
-        \$('#chart-selector').on('change', function(elemn) {
+        \$('#chart-start, #chart-end').on('change', function(elemn) {
             showCharts()
 
             // Lets us leave (needs to be called after the change event)
