Show server bps on Status and interface page

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -211,6 +211,10 @@
                                     </div>
                                 </div>
                                 <div class="row">
+                                    <div class="col-sm-6">$T('speed')</div>
+                                    <div class="col-sm-6" data-bind="text: serverbps"></div>
+                                </div>
+                                <div class="row">
                                     <div class="col-sm-6"># $T('connections')</div>
                                     <div class="col-sm-6">
                                         <span data-bind="text: serverconnections().length"></span> /
