Remove server bps from config page

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -243,8 +243,7 @@
                             $T('today'): $(server['amounts'][3])B<br/>
                             $T('thisWeek'): $(server['amounts'][2])B<br/>
                             $T('thisMonth'): $(server['amounts'][1])B<br/>
-                            $T('custom'): <span id="server-data-value-${cur}"></span><br/>
-                            $T('speed'): $(server['amounts'][5])B/s
+                            $T('custom'): <span id="server-data-value-${cur}"></span>
                         </div>
                         <div class="server-chart" data-serverid="${cur}"s>
                             <div id="server-chart-${cur}" class="ct-chart"></div>
