--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -211,15 +211,15 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-6">$T('speed')</div>
-                                    <div class="col-sm-6" data-bind="text: serverbps"></div>
-                                </div>
-                                <div class="row">
                                     <div class="col-sm-6"># $T('connections')</div>
                                     <div class="col-sm-6">
                                         <span data-bind="text: serverconnections().length"></span> /
                                         <span data-bind="text: servertotalconn"></span>
                                     </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">$T('speed')</div>
+                                    <div class="col-sm-6"><span data-bind="text: serverbps"></span>B/s</div>
                                 </div>
                                 <div class="row" data-bind="visible: servererror()">
                                     <div class="col-sm-12">
