--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -218,7 +218,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-6">$T('speed')</div>
+                                    <div class="col-sm-6">$T('Glitter-speed')</div>
                                     <div class="col-sm-6"><span data-bind="text: serverbps"></span>B/s</div>
                                 </div>
                                 <div class="row" data-bind="visible: servererror()">
