Show per-server speed (issue #1150) (#1704)
* Show current server speed on server config page

* Show server bps on Status and interface page

* Make black happy

* Remove server bps from config page

* Small optimization tweak

Co-authored-by: Safihre <safihre@sabnzbd.org>

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -217,6 +217,10 @@
                                         <span data-bind="text: servertotalconn"></span>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-sm-6">$T('Glitter-speed')</div>
+                                    <div class="col-sm-6"><span data-bind="text: serverbps"></span>B/s</div>
+                                </div>
                                 <div class="row" data-bind="visible: servererror()">
                                     <div class="col-sm-12">
                                         <div class="alert alert-danger">
